fix select2 dark mode

--- a/src/main/resources/static/assets/css/edit.css
+++ b/src/main/resources/static/assets/css/edit.css
@@ -278,6 +278,12 @@
     background-color: #222738;
     border-color: #30384f;
 }
+.dark .select2-container--bootstrap-5 .select2-selection--single .select2-selection__rendered {
+    padding: 0;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #6c757d;
+}
 
 .dark .select2-selection_arrow {
     color: #bfcbd7;
